@@ -1,3 +1,6 @@
+2008-06-15 - Sean Huber (shuber@huberry.com)
+	* Records now switch lists on scope change
+
 2008-06-09 - Sean Huber (shuber@huberry.com)
 	* Updated CHANGELOG emails
 
